# machine-code-native

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build.yml
.workflow/: BranchPipeline.yml  MasterPipeline.yml  PRPipeline.yml
scripts/: package.ps1  verify-pe.ps1
src/: diagnostics.rs  hardware.rs  main.rs  remote_content.rs  server.rs  state.rs  ui.rs
